.provarCaches/00D5f000005vwGkEAI/objects/rstk__sycustcopy__c.object
<CustomObject>
    <description>sycustcopy</description>
    <fields>
        <fullName>rstk__sycustcopy_destfield__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Destination Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sycustcopy_sourcefield__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Source Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sycustcopy_sycustom__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>System custom configuration</label>
        <referenceTo>rstk__sycustom__c</referenceTo>
        <relationshipLabel>SF Quote Opportunity Conversion Mappings</relationshipLabel>
        <relationshipName>SF_Quote_Opportunity_Conversion_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sycustcopy_type__c</fullName>
        <description>Custom Field Association Type</description>
        <label>Custom Field Association Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity to Sales Order</fullName>
                </value>
                <value>
                    <fullName>Opportunity Line to Sales Order Line</fullName>
                </value>
                <value>
                    <fullName>SF Quote to Sales Order</fullName>
                </value>
                <value>
                    <fullName>SF Quote Line to Sales Order Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>SF Quote Opportunity Conversion Mapping</label>
    <nameField>
        <label>SF Quote Opportunity Conversion Mapping</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SF Quote Opportunity Conversion Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>